src/test/lexer/broken_string.religo.expected
broken_string.religo:1:9: warning: missing terminating '"' character [-Winvalid-pp-token]
let a = "broken
        ^
broken_string.religo:4:6: warning: missing terminating '"' character [-Winvalid-pp-token]
lines";
     ^
2 warnings generated.
ligo: lexer error: The string starting here is interrupted by a line break.
      Hint: Remove the break, close the string before or insert a backslash.
       {"parser_loc":"in file \"broken_string.religo\", line 1, characters 8-9"}
      
